2000-12-07  Larry Jones  <larry.jones@sdrc.com>

	* history.c (history): Allow multiple -m options as documented.

2000-11-29  Derek Price  <derek.price@openavenue.com>

	* root.c (parse_cvsroot): back out yesterday's redundant changes
	* main.c (main): fix CVSROOT trace message to look like other trace
	messages
	* sanity.sh (multiroot2-9): expect new trace message

2000-11-28  Derek Price  <derek.price@openavenue.com>

	* root.c (parse_cvsroot): add trace on this function
	* client.c (get_port_number): make trace print look like others

2000-11-16  Derek Price  <derek.price@openavenue.com>

	* filesubr.c (cvs_temp_file): back out the previous change in the
	interests of portability, add an assertion, and fix the header comment

2000-11-16  Derek Price  <derek.price@openavenue.com>

	* filesubr.c (cvs_temp_file): refine the exit behavior to notice if
	the out param was passed in NULL and, if so, avoid setting it and delete
	the temp file for later

2000-11-16  Derek Price  <derek.price@openavenue.com>

	* filesubr.c (cvs_temp_file): fixed a garble or two, added some
	additional error checking, and added a comment

2000-11-15  Derek Price  <derek.price@openavenue.com>

	* filesubr.c (cvs_temp_file): added cvs_temp_file
	function to use mkstemp rather than one of the other temp file
	generators as gcc keeps complaining I should.
	(cvs_temp_name): altered this function to simply wrap cvs_temp_file
	and deprecated it
	* cvs.h: added prototype for cvs_temp_file
	* commit.c (commit): use the new function instead of the old and plug
	an old (though related) memory leak.
	* import.c (import): use the new function
	* login.c (login): Ditto
	* logmsg.c (do_editor, do_verify): Ditto
	* patch.c (patch_fileproc): Ditto

2000-11-14  Larry Jones  <larry.jones@sdrc.com>

	* update.c, update.h (do_update): Add xdotemplate parameter.
	Change all callers.
	(update_dirent_proc): Use dotemplate for Create_Admin, not 1.
	* checkout.c (checkout_proc): Don't create CVS/Template if